# otus.python.base

./: README.md
homework1/: README.md  main.py
homework2/: README.md  car.py  main.py
homework3/: Readme.md  alembic.ini  main.py  requirements.txt
homework4/: main.py
homework6/: .gitignore  docker-compose.yml
homework6/typicode/: Dockerfile  README.rst  main.py  pyproject.toml
homework6/typicode/docker/: postgres.env
homework6/typicode/typicode/: __init__.py  app.py  config.py
homework6/typicode/typicode/migrations/versions/: b05d2c71dd89_initial_migration.py
homework6/typicode/typicode/models/: __init__.py  album.py  comment.py  photo.py  post.py  product.py  todo.py  user.py
homework6/typicode/typicode/templates/: base.html  index.html
homework6/typicode/typicode/templates/users/: add.html  details.html  index.html
homework6/typicode/typicode/views/: __init__.py  products.py  users.py
homework7/typicode/: Dockerfile  README.rst  pyproject.toml
homework7/typicode/tests/: test_typicode.py
homework7/typicode/typicode/: manage.py
homework7/typicode/typicode/photos/: models.py
homework7/typicode/typicode/posts/: __init__.py  models.py  tests.py  urls.py  views.py
homework7/typicode/typicode/posts/management/commands/: filldata.py
homework7/typicode/typicode/posts/migrations/: 0001_initial.py  0002_album_comment_photo_post_todo.py
homework7/typicode/typicode/posts/templates/posts/: index.html
homework7/typicode/typicode/templates/: base.html
homework7/typicode/typicode/typicode/: asgi.py  settings.py  urls.py  wsgi.py
(+65 files in other folders)
