[tool.poetry]
name = "typicode"
version = "0.1.0"
description = ""
authors = ["ShajTester <kolobrod2002@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-debug-toolbar = "^3.2"
psycopg2-binary = "^2.8.6"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
